--- a/index.html
+++ b/index.html
@@ -101,6 +101,28 @@
 
      <!-- ----------column section------------- -->
        
+     <div class="container">
+        <div class="col-1">
+            <div class="col-img">
+                <img src="image/popular-imtes1.png" alt="">
+            </div>
+            <div class="detail">
+                <p>Established fact that by the <br> readable content</p>
+                <div class="detail-btn">Read More</div>
+            </div>
+        </div>
+        <div class="col-1">
+            <div class="col-img">
+                <img src="image/popular-imtes2.png" alt="">
+            </div>
+            <div class="detail">
+                <p>Established fact that by the <br> readable content</p>
+                <div class="detail-btn">Read More</div>
+            </div>
+        </div>
+     </div>
+
+
 
 
 </body>
