--- a/index.html
+++ b/index.html
@@ -174,6 +174,35 @@
      </div>
 
 
+     <!-- --------instashop---------- -->
+      
+      <div class="onea-container">
+        <div class="onea-text">
+            <p class="name">@Onea</p>
+            <span>Appear, dry there darkness they're seas, dry waters.</span>
+        </div>
+        <div class="instaimg">
+            <div class="img-div">   <img src="image/cover-1.jpg" alt=""></div>
+            <div class="img-div"><img src="image/insta-3.jpg" alt=""></div>
+            <div class="img-div">  <img src="image/product-18.jpg" alt=""></div>
+            <div class="img-div"><img src="image/insta-2.jpg" alt=""></div>
+            <div class="img-div"><img src="image/product-43.jpg" alt=""></div>
+            <div class="img-div">      <img src="image/product-21.jpg" alt=""></div>
+        </div>
+       
+        <div class="brands">
+            <img src="image/mango.svg" alt="">
+            <img src="image/zara.svg" alt="">
+            <img src="image/bershka.svg" alt="">
+            <img src="image/asos.svg" alt="">
+            <img src="image/adidas.svg" alt="">
+            <img src="image/stradivarius.svg" alt="">
+            <img src="image/reebok.svg" alt="">
+        </div>
+
+      </div>
+
+
 
 
 </body>
