--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
             <p>Knitted jumper</p>
             <span>$50</span>
         </div>
+        
         <div class="product">
             <img src="image/collect0024_large.jpg" alt="">
             <p>Knitted jumper</p>
@@ -130,6 +131,11 @@
         </div>
         <div class="product">
             <img src="image/popular-imtes1.png" alt="">
+            <p>Knitted jumper</p>
+            <span>$50</span>
+        </div>
+        <div class="product">
+            <img src="image/product.jpg" alt="">
             <p>Knitted jumper</p>
             <span>$50</span>
         </div>
